2008-01-14 09:17-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSSegmentedControl.h
	* Source/NSSegmentedCell.m
	* Source/NSSegmentedControl.m: Correct tabbing.

2008-01-14 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSKeyValueBinding.m (+getBinding:forObject:): Correct bug
	in last change.

2008-01-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSBindingHelpers.h,
	* Source/NSKeyValueBinding.m: Add reverse value change methods.
	* Source/NSControl.m (-sendAction:to:): Send value change for binding.

2008-01-08 22:35-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSSegmentedCell.h: Added rect ivar to cache frame.
	* Source/NSBundleAdditions.m: Minor formatting changes.
	* Source/NSController.m: Added ivars to encodeWithCoder:.
	* Source/NSNibBindingConnector.m: Added ivars to encodeWithCoder:.
	* Source/NSSegmentedCell.m: Changes to fully implement rendering
	of the cell.
	* Source/NSSegmentedControl.m: Changes to fully implement
	control.

2008-01-08 09:42-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSSegmentedCell.m: Code to draw and render text in 
	segments.

2008-01-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSegmentedCell.m: Added a bit more code.

2008-01-07 09:33-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/AppKit.h
	* Headers/AppKit/NSSegmentedCell.h
	* Headers/AppKit/NSSegmentedControl.h
	* Source/GNUmakefile
	* Source/NSSegmentedCell.m
	* Source/NSSegmentedControl.m: Added initial implementation of
	NSSegmentedCell/NSSegmentedControl.

2008-01-07 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSTextView.h,
	* Source/NSTextView_actions.m,
	* Source/NSTextView.m: Add MacOSX methods and ivars.
	* Source/externs.m: Add NSTextView notification.

2008-01-05 15:25-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSDrawer.h: Added new ivars.
	* Source/NSDrawer.m: Addition implementation of NSDrawer.  Corrected